jenkins_mock/examples/multi_rpm_makefile/kubeobjs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-container
  labels:
    app: demo-container
spec:
  ports:
    - name: 8000-tcp
      protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: demo-container
    deploymentconfig: demo-container
