jenkins_mock/examples/multi_rpm_makefile/kubeobjs/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: demo-container
  labels:
    app: demo-container
spec:
  to:
    kind: Service
    name: demo-container
